<resources>
    <string name="app_name"> 绩点溢出 </string>
    <string name="action_settings"> Settings </string>
    <string name="student_name"> 姓名 </string>
    <string name="student_ID"> 学号 </string>
    <string name="student_sex"> 性别 </string>
    <string name="student_department"> 院系 </string>
    <string name="student_startGrade"> 入学年级 </string>
    <string name="student_belongGrade"> 所属年级 </string>
    <string name="student_password"> 密码 </string>
    <string name="personal_info"> 个人信息 </string>
    <string name="gpa_button_name"> 成绩查询 </string>
    <string name="validate_code"> 验证码 </string>
    <string name="next_one"> 换一个 </string>
    <string name="login_button_name"> 登录 </string>
    <string name="logout_button_name"> 退出 </string>
    <string name="return_button_name"> 返回 </string>
    <string name="calculate_button_name"> 计算 </string>
    <string name="init_score"> 0.000 </string>
    <string name="remember_id"> 记住账号 </string>
    <string name="remember_password"> 记住密码 </string>
    <string name="app_message"> 如果您有任何问题, 欢迎邮件:151250077@smail.nju.edu.cn </string>
    <string name="producer_info"> SE  LG </string>

</resources>
